chore: 完成代码编写

--- a/index.html
+++ b/index.html
@@ -53,12 +53,31 @@
       return;
     }
 
-    const sizeStr = targetDom.parentElement.parentElement.querySelector('small').innerText.replace(/px|\s+/g, '')
+    // https://cdn3.codesign.qq.com/dcloud/attachments/2022/04/24/2867be21a0825945b010454984f99409-o.png?imageMogr2/thumbnail/700x650/interlace/1
+    const imageSrc = document.querySelector('.node-box__content .thumb img').getAttribute('src')
+    const rawImageSrc = imageSrc.slice('?imageMogr2')[0]
 
-    fetch('url', () => {
-      // 上传链接写入粘贴板
-      // 提示上传成功
-    })
+    // https://cdn3.codesign.qq.com/dcloud/attachments/2022/04/24/feb9a55daeb3a6ce77df056e370967f1-o.png?imageMogr2/thumbnail/200x200/quality/40/format/webp
+    const thumbnail = targetDom.parentElement.parentElement.querySelector('small').innerText.replace(/px|\s+/g, '')
+    const qualityText = document.querySelector('.download-slices .download-slices__item .ten-input__input-input').value
+    const matcher = qualityText.match(/\d+/g, '')
+    const format = document.querySelector('.download-slices .download-slices__type .ten-input__input-input').value.trim()
+
+    const imageParams = [
+      `thumbnail/${thumbnail}`,
+      `matcher/${matcher ? matcher[0] : 100}`,
+      `format/${format}`,
+    ].join('/')
+
+    const finalImageUrl = `${rawImageSrc}?imageMogr2/${imageParams}`
+
+    console.log('finalImageUrl:', finalImageUrl)
+
+    // TODO
+    // fetch('url', () => {
+    //   // 上传链接写入粘贴板
+    //   // 提示上传成功
+    // });
   }
 
 </script>
